#VERSION 0.7.99#

*  Peak_Application > added method render(). this method point to front->controller->render(). This simplify the application
                      index so we can do $app->render(); after $app->run(); instead of $app->front->controller->render();

*  Peak_Controller_Front > added method postDispatch()

*  Peak_Controller become Peak_Controller_Action

*  Peak_Controller > removed zendAction() and isZendAction(). fixed handleAction() and 
                     listActions() accordly to that change

*  Peak_Application > property $controller replaced by $front that point to Peak_Controller_Front.
                      This object don't access anymore to Peak_Router object
                      Removed deprecated method validSession().
                      Now, Peak_Application do what it suppose to do: start mvc, bootstrap and delegate 
                      controller dispatching process to Peak_Controller_Front.
                      

*  added Peak_Controller_Front > moved dispatching logic of Peak_Application in this new object

*  Peak_View_Render > added magic method that point to Peak_View __isset()

*  Peak_View > added magic method __isset()


#VERSION 0.7.98#

*  Peak_Controller > added method view()

*  Peak_Core_Extension_Modules > remove method deprecated get(). use getList() instead.

*  fixed Peak_Core > if constant APP_THEME exists, it will set application theme folder, otherwise it will use /views/ 

*  Peak_View_Theme > application /views folder is used as theme folder by default. 
                     method folder() accept null as argument for (re)setting this default behavior. 
                     Otherwise method folder() will change views theme folder to /views/themes/[themename]/

*  Peak_Core > removed deprecated $_controllers, cacheControllers(), getCachedControllers()

*  Peak_Application > moved function _clean() and _cleans() to Peak_Core

*  added class Peak_Spl_FileInfo

*  added new folder for extending spl classes.
